@@ -1,13 +1,13 @@
 ---
 fixtures:
   repositories:
-    stdlib:   "https://github.com/simp/puppetlabs-stdlib.git"
-    simplib:  "https://github.com/simp/pupmod-simp-simplib.git"
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
     # This needs to be in place for the rspec-puppet Hiera 5 hook to work
     # No idea why, it may be because Puppet sees a custom backend and loads all
     # of the global parts.
-    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
   symlinks:
-    simpkv:        "#{source_dir}"
+    simpkv: "#{source_dir}"
     test_plugins: "#{File.join(source_dir, 'spec', 'support', 'modules', 'test_plugins')}"
-    simpkv_test:   "#{File.join(source_dir, 'spec', 'support', 'modules', 'simpkv_test')}"
+    simpkv_test: "#{File.join(source_dir, 'spec', 'support', 'modules', 'simpkv_test')}"
