@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Tue May 25 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.8.0
 - Restrict letter characters used in key and folder names to be
   lowercase
